<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/text_view_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_default"
        android:textSize="@dimen/first_title" />

    <LinearLayout
        android:id="@+id/breaking_bad_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_page_title"
        android:onClick="onClickMovie"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/breaking_bad_alt"
            android:src="@drawable/breaking_bad" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_breaking_bad_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/breaking_bad_title"
                android:textSize="@dimen/second_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/breaking_bad_date"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/the_walking_dead_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/breaking_bad_section"
        android:onClick="onClickMovie"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/the_walking_dead_alt"
            android:src="@drawable/the_walking_dead" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_the_walking_dead_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/the_walking_dead_title"
                android:textSize="@dimen/second_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/the_walking_dead_date"
                android:textSize="@dimen/text_default" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_searh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_default"
        android:onClick="onClickSearch"
        android:text="@string/search_button" />

</RelativeLayout>