<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MovieActivity"
    tools:showIn="@layout/activity_movie">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/linear_layout_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_movie_poster"
                    android:layout_width="100dp"
                    android:layout_height="150dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_default"
                        android:text="@string/movie_title"
                        android:textSize="@dimen/second_title" />

                    <TextView
                        android:id="@+id/text_view_movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/movie_release_date"
                        android:textSize="@dimen/text_default" />

                    <TextView
                        android:id="@+id/text_view_movie_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/movie_genres"
                        android:textSize="@dimen/text_default" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/movie_synopsis"
                    android:textSize="@dimen/second_title"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_view_movie_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_default"
                    android:maxLines="3"
                    android:text="@string/movie_synopsis"
                    android:textSize="@dimen/text_default" />

                <TextView
                    android:id="@+id/text_view_synopsis_see_more_or_less"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:onClick="onClickSeeMoreOrLess"
                    android:text="@string/movie_see_more"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/purple_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_default"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:text="@string/movie_director"
                        android:textAlignment="textEnd"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/text_view_movie_director"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/movie_director" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:text="@string/movie_actors"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_movie_actors"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/movie_actors" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:text="@string/movie_awards"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_movie_awards"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/movie_awards" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/purple_200" />

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>